# TIN

./: .gitignore  CMakeLists.txt
Client/: Makefile  client.cpp  client.h  main.cpp  ticket.cpp  ticket.h
Common/: ServiceDataBaseManager.cpp  ServiceDataBaseManager.h  database  network_object.cpp  network_object.h  serversdatabase  ticket.cpp  ticket.h  utils.cpp  utils.h
Server/: Makefile  main.cpp  server.cpp  server.h
ServiceServer/: Makefile  main.cpp  serviceserver.cpp  serviceserver.h
TicketServer/: Makefile  main.cpp  ticket.cpp  ticket.h  ticketserver.cpp  ticketserver.h
